# analytics-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  config.yaml.example  docker-compose.yml  hatch_build.py  justfile  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml  docker.yml  helm.yml  integration-ollama.yml  integration.yml  publish.yml
connectors/bigquery/: README.md  pyproject.toml
connectors/bigquery/analytics_agent_connector_bigquery/: server.py
connectors/bigquery/tests/: test_engine.py
connectors/hive/: README.md  pyproject.toml
connectors/hive/analytics_agent_connector_hive/: server.py
connectors/snowflake/: README.md  pyproject.toml
connectors/snowflake/analytics_agent_connector_snowflake/: server.py
docker/: Dockerfile
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
helm/analytics-agent/: Chart.yaml  README.md  values.yaml
scripts/: datahub_status.py  ingest_metadata.py  load_sample_data.py
tests/e2e/: datahub-async-fix.spec.ts  generic-mcp-form.spec.ts  mcp-connection.spec.ts  playwright.config.ts  prompt-cache-ui.spec.ts  stream-conversation-switch.spec.ts  stream-switchback.spec.ts  token-counting.spec.ts  update-notification.spec.ts
tests/integration/: test_datahub_tools.py  test_duckdb_e2e.py  test_mcp_transports.py  test_prompt_cache.py
tests/unit/: test_ask_user.py  test_bootstrap.py  test_business_context_suppression.py  test_cli.py  test_compaction.py  test_config.py  test_context_platform_repo.py  test_custom_llm_provider.py  test_datahub_client.py  test_db_pool_engine.py  test_hitl.py  test_llm_provider.py  test_mcp_engine.py  test_openai_compat_proxy.py  test_openai_compatible.py  test_prompt_cache_settings.py  test_quickstart_stale_demo.py  test_response_format.py  test_sandbox.py  test_search_business_context.py  test_settings_wire_format.py  test_skill_business_context.py  (+5 more)
(+152 files in other folders)
