[project]
name = "analytics-agent-connector-hive"
version = "0.3.0"
description = "Hive / Kyuubi / Spark Thrift Server MCP connector for Analytics Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyhive[hive_pure_sasl]>=0.7.0",
    "pure-sasl>=0.6.2",
    "thrift-sasl>=0.4.3",
    "orjson>=3.10.0",
]

[project.scripts]
analytics-agent-connector-hive = "analytics_agent_connector_hive.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
