[project]
name = "analytics-agent-connector-snowflake"
version = "0.1.0"
description = "Snowflake MCP connector for Analytics Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "snowflake-connector-python[pandas,secure-local-storage]>=3.10.0",
    "cryptography>=42.0.0,<43.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
analytics-agent-connector-snowflake = "analytics_agent_connector_snowflake.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
